--- a/empoweredconvofrontend/.eslintrc.json
+++ b/empoweredconvofrontend/.eslintrc.json
@@ -3,10 +3,7 @@
   "plugins": ["react", "prettier"],
   "env": {
     "browser": true,
-    "commonjs": true,
-    "es6": true,
-    "jest": true,
-    "node": true
+    "es6": true
   },
   "rules": {
     "jsx-a11y/href-no-hash": ["off"],
