--- a/empoweredconvofrontend/.eslintrc.json
+++ b/empoweredconvofrontend/.eslintrc.json
@@ -1,9 +1,11 @@
 {
-  "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
+  "extends": ["airbnb", "prettier/react", "plugin:prettier/recommended"],
   "plugins": ["react", "prettier"],
   "env": {
     "browser": true,
-    "es6": true
+    "commonjs": true,
+    "es6": true,
+    "jest": true
   },
   "rules": {
     "jsx-a11y/href-no-hash": ["off"],
