--- a/empoweredconvofrontend/package.json
+++ b/empoweredconvofrontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "formsy-react": "^1.1.5",
     "formsy-semantic-ui-react": "^0.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-player": "^1.11.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
