--- a/empoweredconvofrontend/package.json
+++ b/empoweredconvofrontend/package.json
@@ -12,6 +12,7 @@
     "formsy-semantic-ui-react": "^0.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-player": "^1.11.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
