--- a/empoweredconvofrontend/package.json
+++ b/empoweredconvofrontend/package.json
@@ -8,8 +8,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "build": "^0.1.4",
     "formsy-react": "^1.1.5",
     "formsy-semantic-ui-react": "^0.3.5",
+    "netlify-cli": "^2.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
